--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gulp-webapp-skeleton",
+  "name": "webpack skeleton",
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
@@ -8,19 +8,12 @@
   },
   "author": "mizchi",
   "license": "MIT",
-  "devDependencies": {
-    "browser-sync": "^1.3.2",
-    "browserify": "^4.1.11",
+  "dependencies": {
     "coffee-script": "^1.7.1",
-    "coffeeify": "^0.6.0",
-    "gulp": "^3.8.7",
-    "gulp-concat": "^2.2.0",
-    "gulp-plumber": "^0.6.3",
-    "gulp-rename": "^1.2.0",
-    "gulp-ruby-sass": "^0.7.1",
-    "gulp-watch": "^0.6.8",
-    "jadeify": "^2.3.0",
-    "main-bower-files": "^1.0.2",
-    "vinyl-source-stream": "^0.1.1"
+    "coffee-loader": "^0.7.2",
+    "css-loader": "^0.9.0",
+    "less-loader": "^0.7.7",
+    "style-loader": "^0.8.2",
+    "webpack": "^1.4.13"
   }
 }
