--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "sabizan",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Network proxy by ServiceWorker",
-  "main": "lib/sabizan.js",
+  "main": "lib/index.js",
   "scripts": {
     "build": "browserify -t coffeeify --extension=\".coffee\" src/index.coffee -o dist/sabizan.js",
     "test": "echo \"Error: no test specified\" && exit 1"
