--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "author": "mizchi",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.12.2",
+    "corser": "^2.0.0",
+    "express": "^4.12.3",
+    "express-cors": "0.0.3",
     "path-to-regexp": "^1.0.3"
   },
   "devDependencies": {
